# ball_vision

./: .gitignore  .train_yolov8.py.swp  CMakeLists.txt  train_yolov8.py
data/: dataset.yaml
env/: Dockerfile  requirements.txt  run-env.sh
nuclio/ball_seer/: function.yaml  main.py
scripts/: convert_format.py  run_img.py
src/: ball_track.cpp
zed_detector/src/: main.cpp
